--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   position: relative;
   min-height: 100%;
+  margin-left: calc(99vw - 100%);
 }
 
 body {
@@ -10,6 +11,14 @@ body {
   font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
   color: #777777;
   padding-bottom: 80px;
+}
+
+#navbarName {
+  border: 0;
+}
+
+#navStuff {
+
 }
 
 .name {
@@ -83,9 +92,10 @@ p.connect {
   color: #fff;
 }
 
-.col-md-8 {
+.col-md-9 {
   border: 1px solid #dddddd;
   background-color: #fff;
+  margin-bottom: 20px;
 }
 
 .copyright {
@@ -109,7 +119,7 @@ p.connect {
 
 img.social {
   height: auto;
-  width: 50px;
+  width: 40px;
 }
 
 .footer {
@@ -130,17 +140,129 @@ textarea.form-control {
   margin-bottom: 15px;
 }
 
+.center-block {
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 980px) {
+  html {
+    margin: 0;
+  }
+
+  #navbarLinks {
+    padding: 0;
+  }
+
+  .col-md-3 {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    position: relative;
+    min-height: 100%;
+    margin: 0;
+}
+
+  .container {
+    padding: 0;
+    width: 100%;
+  }
+
+  .navbar-default .navbar-brand {
+    color: #fff;
+    background-color: #4aaaa5;
+    font-family: "Georgia";
+    font-size: 24px;
+    width: 100%;
+  }
+
+  .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+    margin: 0;
+  }
+
+  .navbar-nav {
+    margin: 0;
+  }
+
+  .navbar-default .navbar-nav>li>a {
+    color: #777;
+    padding-top: 15px;
+  }
+
+  .row {
+    margin: 0;
+  }
+
+  .col-md-3 {
+    padding: 0;
+  }
+
+}
+
 @media screen and (max-width: 640px) {
+  
+  html {
+    position: relative;
+    min-height: 100%;
+    margin: 0;
+
+  }
+
+  .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+    margin: 0;
+    text-align: center;
+}
+
+  .container {
+    padding: 0px;
+  }
+
   .navbar-right {
-    float: right;
+    float: none;
     display: flex;
     flex-direction: row;
+    margin: 0;
+    justify-content: center;
+    background-color: #fff;
   }
 
   .navbar-brand {
     width: 100%;
-    text-align: center;
+    text-align: left;
     float: left;
+  }
+
+  .col-xs-12 {
+    width: 100%;
+    padding: 0;
+  }
+
+  .col-md-9 {
+    border: 1px solid #dddddd;
+    background-color: #fff;
+    margin-bottom: 20px;
+  }
+
+  .col-md-3 {
+    padding: 0;
+  }
+
+  .row {
+    margin: 0;
+    width: 100%;
+  }
+
+  .navbar-default .navbar-nav>li>a {
+    color: #777;
+}
+
+  .nav>li {
+    position: relative;
+    display: block;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
 }
